Game to look into: DiRT, The PATH
=Upcoming=
* Resonance - Contributed by mathieu.lacam
* Theme Hospital - Better info from ctristan
From simtech:
* Formula One
* Gratuitous Space Battles - Added campaign progress folder
* Hacker Evolution - Added Steam path 
* Section 8 - Fixed incorrect path 
* Supreme Commander 2 - Seperated settings folder into new entry
From GameSaveManager:
* All Zombies Must Die!
* Choplifter HD
* Crash Time 2: Burning Wheels
* Crash Time 3: Highway Nights
* Cogs - Added steam cloud info
* Costume Quest
* Darkest of Days - Added steam path
* Death Rally
* Diablo III
* Disciples II: Gallean's Return
* Disciples II: Rise of the Elves
* Divine Divinity
* Dogfighter - Added steam cloud info
* Driver: San Fransisco - Added more refined file info
* Dungeons
* Dungeons: The Dark Lord
* Euro Truck Simulator
* Evochron Mercenary
* Final Fantasy VII 2012 Edition
* Firestorm
* From Dust - Added non-steam path
* Full Spectrum Warrior
* Full Spectrum Warrior: Ten Hammers
* Game of Thrones: Genesis
* Gratuitous Tank Battles
* Hacker Evolution: Untold
* Hard Reset: Extended Edition
* H.A.W.X. 2 - Added Ubisoft cloud info
* HOARD
* Ice Age 2
* Ice Age 4: Continental Drift
* I-Fluid
* J.U.L.I.A.
* Legendary
* Magic: The Gathering - Duels of the Planeswalkers
* Orcs Must Die! 2
* Order of War
* Order of War - Challenge
* Roller Coaster Rampage
* Rome: Total War: Alexander - Added steam path
* Sanctum - Added steam cloud info
* Sleeping Dogs
* Soldiers: Heroes of World War II
* Space Siege
* Symphony
* Timeshift - Added steam path and install path
* Two Worlds 2 - Castle Defense
* Unstoppable Gorg
* X: Beyond the Frontier
* Zombie Driver - Added steam cloud info


=8/16/2012=
New Windows Games:
Contributed by Arc Angel:
* Avernum Escape From the Pit
* Binary Domain
* Commandos 2: Men of Courage
* Damnation
* Disciples III: Resurrection
* Dynamite Jack
* Geneforge
* Geneforge 2
* Geneforge 3
* Geneforge 4
* Geneforge 5
* Inversion
* Metal Dead